--- a/config.json
+++ b/config.json
@@ -3,15 +3,10 @@
     "host":"http://134.130.166.185" ,
     "port":"1026"
   },
-  "iota_json": {
+  "iota": {
     "host": "http://134.130.166.185",
     "port": "4041",
-    "protocol": "IoTA-JSON"
-  },
-    "iota_ul": {
-    "host": "http://134.130.166.185",
-    "port": "4061",
-    "protocol": "IoTA-UL"
+    "protocol": "JSON"
   },
   "quantum_leap": {
     "host": "http://134.130.166.185",
