--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-requests>=2.23.0
-authlib>=0.14.3
-fuzzywuzzy>=0.17.0
-PyYAML>=5.3.1
-pandas>=1.0.3
-pydantic>=1.7.3
 astor>=0.8.1
 blinker>=1.4
 parso>=0.6.2
@@ -11,6 +5,7 @@ jedi>=0.16.0
 colorama>=0.4.3
 toml>=0.10.0
 altair>=4.0.1
+pandas>=1.0.3
 toolz>=0.10.0
 ipython>=7.13.0
 numpy>=1.18.1
@@ -19,6 +14,7 @@ jinja2>=2.10.1
 entrypoints>=0.3
 docutils>=0.15.2
 yaml>=0.1.7
+pyyaml>=5.3.1
 base58>=2.0.0
 six>=1.14.0
 lxml>=4.5.0
@@ -47,6 +43,7 @@ packaging>=19.0
 pickleshare>=0.7.5
 setuptools>=40.6.0
 nbformat>=5.0.4
+requests>=2.23.0
 tornado>=5.1.1
 notebook>=6.0.3
 pyzmq>=19.0.0
@@ -60,6 +57,7 @@ defusedxml>=0.6.0
 pandocfilters>=1.4.2
 mistune>=0.8.4
 python>=3.8.2
+mock>=4.0.1
 watchdog>=0.10.2
 pathtools>=0.1.2
 python-dateutil>=2.8.0
@@ -80,4 +78,8 @@ olefile>=0.46
 pathlib2>=2.3.5
 zipp>=3.1.0
 filip>=0.1
+pydantic>=1.7.3
 aenum>=3.0.0
+fuzzywuzzy>=0.17.0
+authlib>=0.14.3
+xlrd>=2.0.1
