remove all submodule
For #8

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,5 @@
 	url = https://github.com/FIWARE/specifications
 [submodule "external_resources/data-models"]
 	path = external_resources/data-models
-	url = https://github.com/smart-data-models/data-models
+	url = https://github.com/smart-data-models/data-models.git
+
