added first working version. Missing tests
For #13

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ nbconvert>=5.6.1
 defusedxml>=0.6.0
 pandocfilters>=1.4.2
 mistune>=0.8.4
+mock>=4.0.1
 watchdog>=0.10.2
 pathtools>=0.1.2
 python-dateutil>=2.8.0
@@ -66,6 +67,7 @@ jsonpointer>=2.0
 click>=7.1.2
 bokeh>=2.0.1
 validators>=0.14.2
+typing_extensions>=3.7.4.1
 cffi>=1.14.0
 cython>=0.29.15
 olefile>=0.46
