--- a/tests/.env.filip
+++ b/tests/.env.filip
@@ -1,4 +1,4 @@
-CB_URL="http://134.130.166.184:1026"
-IOTA_URL="http://134.130.166.184:4041"
+CB_URL="http://localhost:1026"
+IOTA_URL="http://localhost:4041"
 QL_URL="http://134.130.166.184:8668"
 LOGLEVEL="INFO"
