--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,11 @@
-astor>=0.8.1
-blinker>=1.4
-parso>=0.6.2
-jedi>=0.16.0
-colorama>=0.4.3
-toml>=0.10.0
-altair>=4.0.1
-pandas>=1.2.0
-toolz>=0.10.0
-ipython>=7.13.0
-numpy>=1.18.1
-jsonschema>=3.2.0
-jinja2>=2.10.1
-entrypoints>=0.3
-docutils>=0.15.2
-pyyaml>=5.3.1
-base58>=2.0.0
-six>=1.14.0
-lxml>=4.5.0
-webencodings>=0.5.1
-bleach>=3.1.3
-botocore>=1.15.28
-boto3>=1.12.28
-s3transfer>=0.3.3
-jmespath>=0.9.5
-future>=0.18.2
-configparser>=3.7.4
-pytz>=2019.1
-tzlocal>=2.0.0
-wcwidth>=0.1.9
-backcall>=0.1.0
-pygments>=2.6.1
-pathlib>=1.0.1
-ipykernel>=5.2.0
-traitlets>=4.3.3
-wxpython>=4.0.7.post2
-testpath>=0.4.4
-decorator>=4.4.2
-matplotlib>=3.1.3
-packaging>=19.0
-pickleshare>=0.7.5
-setuptools>=40.6.0
-nbformat>=5.0.4
 requests>=2.23.0
-tornado>=5.1.1
-notebook>=6.0.3
-pyzmq>=19.0.0
-send2trash>=1.5.0
-terminado>=0.8.3
-pydeck>=0.3.0b2
-pillow>=7.0.0
-ipywidgets>=7.5.1
-nbconvert>=5.6.1
-defusedxml>=0.6.0
-pandocfilters>=1.4.2
-mistune>=0.8.4
-mock>=4.0.1
-watchdog>=0.10.2
-pathtools>=0.1.2
-python-dateutil>=2.8.0
-urllib3>=1.25.8
-certifi>=2019.11.28
-attrs>=19.3.0
-pyrsistent>=0.16.0
-idna>=2.9
-jsonpointer>=2.0
-click>=7.1.2
-bokeh>=2.0.1
-validators>=0.14.2
-typing_extensions>=3.7.4.1
-cffi>=1.14.0
-cython>=0.29.15
-olefile>=0.46
-pathlib2>=2.3.5
-zipp>=3.1.0
 pydantic>=1.8.1
+filip>=0.1
 aenum>=3.0.0
-fuzzywuzzy>=0.17.0
-xlrd>=2.0.1
+pathlib>=1.0.1
 regex>=2021.3.17
-datamodel-code-generator>=0.10.2
-pandas-datapackage-reader>=0.18.0
+pytz>=2019.1
+fuzzywuzzy>=0.17.0
+pandas>=1.2.0
+numpy>=1.18.2
+setuptools>=40.6.0
