--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,6 @@ venv
 
 #filip-development
 secrets-tst.json
-config-tst.json
 
 /filip/external_resources/unece-units-of-measure.hdf
+/external_resources/
