removed logging settings from library. Fixed bug in client log. For #3

--- a/.env.filip
+++ b/.env.filip
@@ -1,4 +1,4 @@
 CB_URL="http://134.130.166.184:1026"
 IOTA_URL="http://134.130.166.184:4041"
 QL_URL="http://134.130.166.184:8668"
-LOGLEVEL="INFO"
+LOG_LEVEL="INFO"
