--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,3 +13,7 @@ include:
       file: 'python/doc/sphinxdoc.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'pages/pages.gitlab-ci.yml'
+    - project: 'EBC/EBC_all/gitlab_ci/templates'
+	  file: 'python/unit-tests/unittest.gitlab-ci.yml'
+	- project: 'EBC/EBC_all/gitlab_ci/templates'
+	  file: 'python/unit-tests/coverage.gitlab-ci.yml'
