Cleanup, IP Config for CI
Removed GitHub CI instructions

Changed test: config read-in (is that logical?)

Added env varibales in the CI

Made tests folders to packages, for that tests are found

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,10 @@ stages:
 
 variables:
     EXCLUDE_PYTHON: 36
+    CB_URL: 'http://134.130.166.184:1026'
+    IOTA_URL: 'http://134.130.166.184:4041'
+    QL_URL: 'http://134.130.166.184:8668'
+    
 
 include:
     - project: 'EBC/EBC_all/gitlab_ci/templates'
