--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,9 @@ stages:
 
 variables:
     EXCLUDE_PYTHON: 36
-    CB_URL: 'http://134.130.166.184:1026'
-    IOTA_URL: 'http://134.130.166.184:4041'
-    QL_URL: 'http://134.130.166.184:8668'
+    CB_URL: http://134.130.166.184:1026
+    IOTA_URL: http://134.130.166.184:4041
+    QL_URL: http://134.130.166.184:8668
     
 
 include:
