--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
     CB_URL: http://134.130.166.184:1026
     IOTA_URL: http://134.130.166.184:4041
     QL_URL: http://134.130.166.184:8668
+    MQTT_BROKER: mqtt://134.130.166.184:1883
     
 
 include:
