modified git ignore
For #24

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ secrets-tst.json
 /filip/external_resources/unece-units-of-measure.hdf
 /external_resources/
 /playground.py
+/docs/diagrams/src/clients.wsd
+/filip/data/unece-units.hdf
