--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@ __pycache__
 *.log
 .project
 .pydevproject
+
 *.yml
+# include issue branch workflows
+!.github/workflows/issue-tracker.yml
+!.github/issue-branch.yml
+
 *.yaml
 
 # pip install #
