removed fuzzywuzzy from requirements.txt and added rapidfuzz
For #41

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aenum>=3.0.0
 pathlib>=1.0.1
 regex>=2021.3.17
 pytz>=2019.1
-fuzzywuzzy>=0.17.0
+rapidfuzz>=1.7.1
 pandas>=1.2.0
 setuptools>=40.6.0
 paho-mqtt>=1.5.1
