added some more magic mapping
For #45

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,7 @@ secrets-tst.json
 /filip/external_resources/unece-units-of-measure.hdf
 /external_resources/
 /playground.py
+/playground_2.py
+
+
 /docs/diagrams/src/clients.wsd
