--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ python-Levenshtein>=0.12.2
 filip~=0.1.5
 numpy~=1.19.5
 rdflib~=6.0.0
-dateutil>=2.8.2
+python-dateutil>=2.8.2
 wget >=3.2
 stringcase>=1.2.0
 igraph==0.9.8
