--- a/tests/.env
+++ b/tests/.env
@@ -1,6 +1,7 @@
 LOG_LEVEL="info"
 CB_URL="http://localhost:1026"
-IOTA_URL="http://localhost:4041"
+IOTA_JSON_URL="http://localhost:4041"
+IOTA_UL_URL="http://localhost:4061"
 QL_URL="http://localhost:8668"
 MQTT_BROKER_URL="mqtt://134.130.166.184:1883"
 FIWARE_SERVICE="filip"
