Client and Iot Example

--- a/examples/.env.filip
+++ b/examples/.env.filip
@@ -1,3 +1,3 @@
-CB_URL="http://yourHost:1026"
-IOTA_URL="http://yourHost:4041"
-QL_URL="http://yourHost:8668"
+CB_URL="http://localhost:1026"
+IOTA_URL="http://localhost:4041"
+QL_URL="http://localhost:8668"
