feat(ci): enable semantic release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
 # Inside of setup.cfg
 [metadata]
 description-file = README.md
+
+[semantic_release]
+version_variable = filip/__init__.py:__version__, docs/source/conf.py:release
+major_on_zero = false
+upload_to_pypi = false
