--- a/.gitignore
+++ b/.gitignore
@@ -38,12 +38,9 @@ venv
 /tests/.env
 
 #filip-development
-secrets-tst.json
-
 /filip/external_resources/unece-units-of-measure.hdf
 /external_resources/
-/playground.py
-/playground_2.py
-
 
 /docs/diagrams/src/clients.wsd
+/tests/semantics/models.py
+/tests/semantics/models2.py
