chore: moved model creator to utils and completed example
For #117

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ venv
 /external_resources/
 
 /docs/diagrams/src/clients.wsd
+/examples/data_models/
 /tests/semantics/models.py
 /tests/semantics/models2.py
