--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pandas>=1.2.0
 setuptools>=40.6.0
 pandas_datapackage_reader>=0.18.0
 python-Levenshtein>=0.12.2
-numpy~=1.19.5
+numpy>=1.21
 rdflib~=6.0.0
 python-dateutil>=2.8.2
 wget >=3.2
