ci: added build stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
     - test
     - doc
     - code_quality
+    - build
     - deploy
 
 variables:
@@ -19,3 +20,5 @@ include:
       file: 'python/unit-tests/unittest.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'python/unit-tests/coverage.gitlab-ci.yml'
+    - project: 'EBC/EBC_all/gitlab_ci/templates'
+      file: 'python/build/build.gitlab-ci.yml'
