--- a/tests/clients/.env.filip
+++ b/tests/clients/.env.filip
@@ -1,3 +1,3 @@
-CB_URL="http://134.94.194.69:1026"
-IOTA_URL="http://134.94.194.69:4041"
-QL_URL="http://134.94.194.69:8668"
+CB_URL="http://localhost:1026"
+IOTA_URL="http://localhost:4041"
+QL_URL="http://localhost:8668"
