--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ stages:
 
 variables:
     EXCLUDE_PYTHON: 36
+    PYTHON_VERSION: "registry.git.rwth-aachen.de/ebc/ebc_all/gitlab_ci/templates:python_3.9"
     PAGES_BRANCH: master
 
 include:
@@ -17,8 +18,8 @@ include:
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'pages/pages.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
-      file: 'python/unit-tests/unittest.gitlab-ci.yml'
+      file: 'python/tests/tests.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
-      file: 'python/unit-tests/coverage.gitlab-ci.yml'
+      file: 'python/tests/coverage.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'python/build/build.gitlab-ci.yml'
