Adjusted dependencies on pydantic to the newest v1.* version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests>=2.23.0
 python-dotenv>=0.19.1
-pydantic[dotenv]>=1.8.1
+pydantic[dotenv]~=1.10.11
 aenum>=3.0.0
 pathlib>=1.0.1
 regex>=2021.3.17
