--- a/tests/test_config.env
+++ b/tests/test_config.env
@@ -1,3 +1,3 @@
-IOTA_URL="http://myHost:4041"
-OCB_URL="http://myHost:1026"
-Quantumleap_URL="http://myHost:8668"
+IOTA_URL="http://myHost:4041/"
+OCB_URL="http://myHost:1026/"
+Quantumleap_URL="http://myHost:8668/"
