--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,3 +24,8 @@ include:
       file: 'python/tests/coverage.gitlab-ci.yml'
     - project: 'EBC/EBC_all/gitlab_ci/templates'
       file: 'python/build/build.gitlab-ci.yml'
+
+echo_url:
+  stage: build
+  script:
+    - echo $CI_GITLAB_URL
