--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
     - deploy
 
 variables:
-    EXCLUDE_PYTHON: 311
+    EXCLUDE_PYTHON: 311, 312
     PYTHON_VERSION: "registry.git.rwth-aachen.de/ebc/ebc_all/gitlab_ci/templates:python_3.9"
     PAGES_BRANCH: master
     PYTHON_PACKAGE_NAME: "filip"
