--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,6 @@ setuptools>=40.6.0
 pandas_datapackage_reader~=0.18.0
 python-Levenshtein~=0.23.0
 numpy~=1.26.2
-rdflib~=6.0.2
-igraph~=0.9.8
 python-dateutil~=2.8.2
 wget~=3.2
 stringcase~=1.2.0
@@ -21,3 +19,6 @@ paho-mqtt~=1.6.1
 datamodel_code_generator[http]~=0.25.0
 # tutorials
 matplotlib>=3.8.2
+# semantics
+# rdflib~=6.0.2
+# igraph~=0.9.8
