--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ regex~=2023.10.3
 pytz~=2023.3.post1
 rapidfuzz~=3.5.2
 pandas~=2.1.3
-setuptools>=40.6.0
+setuptools~=68.0.0
 pandas_datapackage_reader~=0.18.0
 python-Levenshtein~=0.23.0
 numpy~=1.26.2
