--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 requests~=2.31.0
-python-dotenv~=1.0.0
+python-dotenv>=0.21.0
 pydantic~=2.5.2
-pydantic-settings~=2.1.0
+pydantic-settings~=2.0.0
 aenum~=3.1.15
 pathlib~=1.0.1
 regex~=2023.10.3
 pytz~=2023.3.post1
-rapidfuzz~=3.5.2
-pandas~=2.1.3
+rapidfuzz~=3.4.0
+pandas~=1.3.5
 setuptools~=68.0.0
 pandas_datapackage_reader~=0.18.0
 python-Levenshtein~=0.23.0
-numpy~=1.26.2
+numpy~=1.20.0
 python-dateutil~=2.8.2
 wget~=3.2
 stringcase~=1.2.0
 paho-mqtt~=1.6.1
 datamodel_code_generator[http]~=0.25.0
 # tutorials
-matplotlib>=3.8.2
+matplotlib~=3.5.3
 # semantics
-# rdflib~=6.0.2
+rdflib~=6.0.0
 # igraph~=0.9.8
