--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ pathlib~=1.0.1
 regex~=2023.10.3
 pytz~=2023.3.post1
 rapidfuzz~=3.4.0
-pandas~=2.1.4
+pandas~=2.1.4; python_version >= '3.9'
+pandas~=1.3.5; python_version < '3.9'
 setuptools~=68.0.0
 pandas_datapackage_reader~=0.18.0
 python-Levenshtein~=0.23.0
