--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ stringcase~=1.2.0
 paho-mqtt~=1.6.1
 datamodel_code_generator[http]~=0.25.0
 # tutorials
-matplotlib~=3.5.3
+matplotlib~=3.5.3; python_version < '3.9'
+matplotlib~=3.8.0; python_version >='3.9'
 # semantics
 rdflib~=6.0.0
 # igraph~=0.9.8
