--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ requests~=2.31.0
 python-dotenv>=0.21.0
 pydantic>=2.5.2,<2.7.0
 pydantic-settings>=2.0.0,<2.3.0
-geojson_pydantic~=1.0.2
+geojson-pydantic~=1.0.2
 aenum~=3.1.15
 pathlib~=1.0.1
 regex~=2023.10.3
