--- a/examples/basics/.env.filip
+++ b/examples/basics/.env.filip
@@ -1,3 +1,3 @@
-CB_URL="http://localfhost:10f26"
-IOTA_URL="http://localfhost:40f41"
-QL_URL="http://localfhost:86f68"
+CB_URL="http://localhost:1026"
+IOTA_URL="http://localhost:4041"
+QL_URL="http://localhost:8668"
