--- a/.env.filip.EXAMPLE
+++ b/.env.filip.EXAMPLE
@@ -5,3 +5,4 @@
 CB_URL="http://localhost:1026"
 IOTA_URL="http://localhost:4041/"
 QL_URL="http://localhost:8668"
+MQTT_BROKER_URL="mqtt://localhost:1883"
