--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
-sphinx>=4.2
-autodoc-pydantic>=1.4.0
+sphinx~=6.2.1
+autodoc-pydantic~=2.2.0
 sphinx-autobuild>=2021.3.14
 m2r2>=0.3.1
 sphinx-rtd-theme>=0.5.2
