--- a/.coveragerc
+++ b/.coveragerc
@@ -5,7 +5,7 @@ omit =
 	# omit deprecated code
 	*/deprecated*
 	# omit semantics module
-	filip/semantics/*
+	*/semantics/*
 source =
 	filip
 [report]
