Add GitHub Actions workflow for unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ __pycache__
 # include issue branch workflows
 !.github/workflows/issue-tracker.yml
 !.github/issue-branch.yml
+!.github/workflows/unittest.yml
+
 
 *.yaml
 
