--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -28,17 +28,26 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    # Step 3: Install Dependencies
-    - name: Install Dependencies
+    # Step 3: Install Filip Library
+    - name: Install Filip Library
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install --upgrade pip
+        pip install -U git+https://github.com/RWTH-EBC/filip.git
 
-    # Step 4: Run Unit Tests
+
+    # Step 4: Set up Environment Variables
+    - name: Set up Test Environment
+      run: |
+        echo "LOG_LEVEL=INFO" >> tests/.env
+        echo "CB_URL=http://localhost:1026" >> tests/.env
+        echo "IOTA_JSON_URL=http://localhost:4041" >> tests/.env
+        echo "IOTA_UL_URL=http://localhost:4061" >> tests/.env
+        echo "QL_URL=http://localhost:8668" >> tests/.env
+        echo "MQTT_BROKER_URL=mqtt://localhost:1883" >> tests/.env
+        echo "FIWARE_SERVICE=filip" >> tests/.env
+        echo "FIWARE_SERVICEPATH=/testing" >> tests/.env
+
+    # Step 5: Run Unit Tests
     - name: Run Unit Tests
       run: |
-        if [[ "${{ matrix.python-version }}" == "3.7" ]]; then
-          python -m unittest discover --verbose . "test_*.py"
-        else
-          python -m pytest tests/
-        fi
+        python -m unittest discover tests --verbose
