--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -29,10 +29,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     # Step 3: Install Filip Library
-    - name: Clone Filip with Submodules
+    - name: Install Filip Library in Editable Mode
       run: |
-        git clone --recurse-submodules https://github.com/RWTH-EBC/filip.git
-        cd filip
+        pip install --upgrade pip
         pip install -e .
 
     # Step 4: Set up Environment Variables
