chore: change example .env for ngsi-ld

--- a/.env.filip.EXAMPLE
+++ b/.env.filip.EXAMPLE
@@ -3,6 +3,7 @@
 # local file `.env.filip` in the root folder, i.e., ".../FiLiP/.env.filip"
 # Do not add the created `.env.filip` to the git
 CB_URL="http://localhost:1026"
+LD_CB_URL="http://localhost:1027"
 IOTA_URL="http://localhost:4041/"
 QL_URL="http://localhost:8668"
 MQTT_BROKER_URL="mqtt://localhost:1883"
