--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
 
 variables:
     EXCLUDE_PYTHON: 37
+    ENABLE_PYTHON12: "true"
     PYTHON_VERSION: "registry.git.rwth-aachen.de/ebc/ebc_all/gitlab_ci/templates:python_3.9"
     PAGES_BRANCH: master
     GIT_REPO: "RWTH-EBC/FiLiP"
