--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -9,11 +9,11 @@ on:
       - main
 
 jobs:
-  test:
+  setup:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
+        python-version: [3.8, 3.9, 3.10, 3.11]
 
     steps:
     - name: Checkout code
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies using setup.py
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[development]  # Install dependencies with setup.py
+        pip install -e .[development]  # Install dependencies from setup.py
 
     - name: Create .env file
       run: |
@@ -37,6 +37,22 @@ jobs:
         echo "QL_URL=http://134.130.56.175:8668" >> .env
         echo "MQTT_BROKER_URL=mqtt://134.130.56.175:1883" >> .env
 
+  test:
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
     - name: Run unittests
       run: |
-        python -m unittest discover -s tests -p "test_*.py"  # Discover and run all unittests in the 'tests' folder
+        python -m unittest discover -s tests -p "test_*.py"
