--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -18,32 +18,42 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         test-engine: ["PYTEST", "UNITTEST"]
 
-    continue-on-error: true
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      # Step 1: Checkout the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    # Step 2: Set up Python
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      # Step 2: Create .env File from .env.filip.EXAMPLE
+      - name: Create .env File
+        run: cp .env.filip.EXAMPLE .env.filip
 
-    # Step 3: Verify Directory Structure
-    - name: Verify Directory Structure
-      run: |
-        echo "Listing files to verify directory structure:"
-        ls -R ${GITHUB_WORKSPACE}
+      # Step 3: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    # Step 4: Run Tests
-    - name: Run Tests
-      continue-on-error: true
-      run: |
-        TEST_PATH="${{ github.workspace }}/FiLiP/tests"
-        echo "Testing path: $TEST_PATH"
-        if [ "${{ matrix.test-engine }}" == "PYTEST" ]; then 
-          python -m pytest $TEST_PATH/ || true; 
-        else 
-          python -m unittest discover --verbose $TEST_PATH "test_*.py" || true; 
-        fi
+      # Step 4: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
+          if [[ -f setup.py ]]; then pip install -e .; fi
+          pip install pytest
+
+      # Step 5: Verify Directory Structure
+      - name: Verify Directory Structure
+        run: |
+          echo "Listing files to verify directory structure:"
+          ls -R ${GITHUB_WORKSPACE}
+
+      # Step 6: Run Tests
+      - name: Run Tests
+        run: |
+          TEST_PATH="${{ github.workspace }}/FiLiP/tests"
+          echo "Testing path: $TEST_PATH"
+          if [ "${{ matrix.test-engine }}" == "PYTEST" ]; then 
+            python -m pytest $TEST_PATH/; 
+          else 
+            python -m unittest discover --verbose $TEST_PATH "test_*.py"; 
+          fi
