--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9"]
         test-engine: ["PYTEST", "UNITTEST"]
 
     steps:
@@ -38,8 +38,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          if [[ -f requirements.txt ]]; then pip install -r requirements.txt; fi
-          if [[ -f setup.py ]]; then pip install -e .; fi
+          if [[ -f requirements.txt ]]; then pip install --no-use-pep517 -r requirements.txt; fi
+          if [[ -f setup.py ]]; then pip install --no-use-pep517 -e .; fi
 
       # Step 5: Verify Directory Structure
       - name: Verify Directory Structure
