--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -19,6 +19,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Cache Python dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py', 'requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -26,12 +34,11 @@ jobs:
 
     - name: Install build tools
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
+        python -m pip install --upgrade pip setuptools wheel
 
     - name: Install dependencies
       run: |
-        pip install .[development]
+        pip install --use-pep517 .[development]
 
     - name: Create .env file
       run: |
@@ -57,6 +64,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Cache Python dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('setup.py', 'requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -64,17 +79,28 @@ jobs:
 
     - name: Install build tools
       run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
+        python -m pip install --upgrade pip setuptools wheel
 
     - name: Install test dependencies
       run: |
-        pip install .[test]
+        pip install --use-pep517 .[test]
 
     - name: Run unittests
       run: |
         python -m unittest discover -s tests -p "test_*.py"
 
-    - name: Run pytest (if applicable)
+    - name: Run pytest
+      continue-on-error: true
       run: |
-        python -m pytest tests || true
+        python -m pytest tests
+
+    - name: Generate coverage report
+      run: |
+        python -m coverage run -m pytest tests
+        python -m coverage html
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v3
+      with:
+        name: coverage-html
+        path: htmlcov/
