--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-CB_URL=http://134.130.56.175:1026
-LD_CB_URL=http://134.130.56.175:1027
-IOTA_URL=http://134.130.56.175:4041
-QL_URL=http://134.130.56.175:8668
-MQTT_BROKER_URL=mqtt://134.130.56.175:1883
+CB_URL=http://localhost:1026
+LD_CB_URL=http://localhost:1027
+IOTA_URL=http://localhost:4041
+QL_URL=http://localhost5:8668
+MQTT_BROKER_URL=mqtt://localhost:1883
