--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 CB_URL=http://localhost:1026
 LD_CB_URL=http://localhost:1027
 IOTA_URL=http://localhost:4041
-QL_URL=http://localhost5:8668
+QL_URL=http://localhost:8668
 MQTT_BROKER_URL=mqtt://localhost:1883
