--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -64,7 +64,7 @@ jobs:
 
       # Step 2: Start FIWARE services
       - name: Start FIWARE services
-        run: docker-compose up -d
+        run: docker compose up -d
 
       # Step 3: Wait for FIWARE services to start
       - name: Wait for FIWARE services
